# CassioPy

./: .gitignore  .readthedocs.yaml  LICENCE  README.md  pyproject.toml  requirement.txt  requirements.txt
CassioPy/: MixtureModel.py  __init__.py  mixture.py  stats.py  test.py
GenePy/: Skew_Mixture.py  stats.py
cassiopy/: __init__.py  grid.py  mixture.py  stats.py
cassiopy1/: mixture.py
docs/: API.rst  Makefile  MixtureModel.rst  ModuleContents.rst  SkewMixtureModel.rst  conf.py  glossary.rst  requirement.txt  requirements.txt  stats.skew.generate.rst  stats.skew.pdf.rst  test.py
docs/_autosummary/: cassiopy.mixture.SkewMixture.rst
docs/_build/doctrees/: API.doctree  MixtureModel.doctree  ModuleContents.doctree  SkewMixtureModel.doctree  environment.pickle  getting_started.doctree  glossary.doctree  index.doctree  stats.doctree  stats.skew.generate.doctree  stats.skew.pdf.doctree
docs/_build/html/: .buildinfo  API.html  MixtureModel.html  ModuleContents.html  SkewMixtureModel.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  stats.html  stats.skew.generate.html  stats.skew.pdf.html
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: MixtureModel.rst.txt  ModuleContents.rst.txt  SkewMixtureModel.rst.txt  getting_started.rst.txt  index.rst.txt  stats.skew.generate.rst.txt
docs/source/: API.rst  Contact.rst  Documentation.rst  Glossary.rst  MixtureModel.rst  ModuleContents.rst  SkewMixtureModel.rst  conf.py  getting_started.rst  index.rst  stats.rst  stats.skew.generate.rst  stats.skew.pdf.rst  stats.skew.rst
docs/source/API/: MixtureModel.rst  SkewTMixture.rst  SkewTUniformMixture.rst  grid.rst  stats.SkewT.pdf.rst  stats.SkewT.random_cluster.rst  stats.SkewT.rvs.rst  stats.rst  stats.skew.pdf.rst  stats.skew.rvs.rst
docs/source/Documentation/: Mixture.rst  Stats.rst  referenceARI.bib  referenceBIC.bib  referencePDF.bib  referencemixturemodel.bib
docs/source/User_guide/: Stats.rst
docs/source/_static/: custom.css  custom.js
docs/source/_templates/: layout.html
