
[tool.poetry]
name = "cassiopy"
version = "0.0.19"
description = "A skew library"
authors = ["Maya GUY <Maya.guy@msomg.fr>"]
license = "MIT"
readme = "README.md"
packages = [{'include' = 'cassiopy'}]

[tool.poetry.dependencies]
python = ">=3.8"
numpy = ">=1.21"
h5py = ">=3.11.0"
joblib = ">=1.4.2"
matplotlib = ">=3.4.3"
pandas = ">=1.3.5"
scipy = ">=1.13.1"
scikit-learn = ">=1.5.1"

[tool.poetry.extras]
docs = [
  "pydata-sphinx-theme>=0.15.3",
  "sphinx>=7.3.7",
  "sphinx-copybutton>=0.5.2",
  "sphinx-gallery>=0.16.0",
  "sphinx-hoverxref",
  "sphinx-redactor-theme",
  "spinx_design"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

