
[tool.poetry]
name = "cassiopy"
version = "0.0.25"
description = "A skew library"
authors = ["Maya GUY <Maya.guy@msomg.fr>"]
license = "MIT"
readme = "README.md"
packages = [{'include' = 'cassiopy'}]

[tool.poetry.dependencies]
python = ">=3.8"
numpy = ">=1.25"
h5py = ">=3.11.0"
joblib = ">=1.4.2"
matplotlib = ">=3.4.3"
pandas = ">=1.3.5"
scipy = ">=1.10"
scikit-learn = ">=1.5.1"
seaborn = ">=0.12"

[tool.poetry.extras]
docs = [
  "pydata-sphinx-theme",
  "sphinx",
  "sphinx-copybutton",
  "sphinx-hoverxref",
  "spinx_design"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

